--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,26 @@ main {
 #p2Board {
   border: 2px solid black;
   width: 300px;
-  height: 300px;
+  aspect-ratio: 1 / 1;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+}
+.boardColumn {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.s,
+.h,
+.m,
+.e {
+  border: 1px solid black;
+  height: 100%;
+}
+
+.h {
+  background-color: rgb(220, 9, 9);
+}
+.m {
+  background-color: rgb(48, 48, 179);
 }
