--- a/src/style.css
+++ b/src/style.css
@@ -19,8 +19,31 @@ body {
   opacity: 70%;
 }
 
+#winMessage.hidden {
+  display: none;
+}
+
 .hidden {
   display: none;
+}
+
+#winMessage {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+  padding: 1rem 2rem;
+  background-color: rgb(249, 245, 238);
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+#playAgain {
+  padding: 0.5rem 1rem;
 }
 
 #popup {
@@ -37,10 +60,9 @@ body {
 
 h2 {
   text-align: center;
-  padding: 1rem;
 }
 
-h1 {
+header > h1 {
   padding: 2rem;
   text-align: center;
 }
