Move popup board further up

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ body {
 
 #popup {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   border: 1px solid black;
@@ -87,6 +87,10 @@ main {
 #popup {
   width: fit-content;
   height: fit-content;
+}
+
+#currentShipHeader {
+  margin-top: 10px;
 }
 
 #placeShipsBoard {
